charts/prova2-charts_export.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: prova2
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2025-06-04T10:20:52Z"
  generation: 1
  labels:
    app.kubernetes.io/instance: prova2
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: charts
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: charts-0.1.0
  name: prova2-charts
  namespace: default
  resourceVersion: "67580"
  uid: bc388aff-182f-40f7-89ed-b4741ffc7685
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: prova2
      app.kubernetes.io/name: charts
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: prova2
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: charts
        app.kubernetes.io/version: 1.16.0
        helm.sh/chart: charts-0.1.0
    spec:
      containers:
      - image: giulia005/docker_hub_giulia:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: charts
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: prova2-charts
      serviceAccountName: prova2-charts
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-06-04T10:20:52Z"
    lastUpdateTime: "2025-06-04T10:20:54Z"
    message: ReplicaSet "prova2-charts-bd6bf6ffb" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-06-04T11:20:24Z"
    lastUpdateTime: "2025-06-04T11:20:24Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
